--- a/css/layout/content.css
+++ b/css/layout/content.css
@@ -1,7 +1,18 @@
 /* content */
 
 #main {
-    width: 960px;
-    margin: 0 auto;
     position: relative;
+}
+
+#main header .inner,
+#main section .inner {
+    width: 960px;
+    height: 100%;
+    margin: 0 auto;
+    background: #666;
+    overflow: hidden;
+}
+
+#main section {
+    background: #999;
 }
