--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -1,16 +1,7 @@
 /* Nav */
 
 nav {
-    position: fixed;
-    top: 0; right: 0;
-    width: 100%;
-}
-
-nav .inner {
-    width: 960px;
-    text-align: right;
-    margin: 0 auto;
-    overflow: hidden;
+    float: right;
 }
 
 nav ul{
@@ -18,9 +9,41 @@ nav ul{
     padding: 0;
     overflow: hidden;
     float: right;
-
 }
 
 nav li {
     float: left;
+}
+
+/* Navigation secondaire */
+
+#secondNav {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+#secondNav ul {
+    float: none;
+}
+
+#secondNav li {
+    display: block;
+    float: none;
+}
+
+#secondNav li a {
+    display: inline-block;
+    text-indent: 9999px;
+    width: 20px; height: 20px;
+    background-color: #EEE;
+    overflow: hidden;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -o-border-radius: 15px;
+    border-radius: 15px;
+}
+
+#secondNav li a:hover {
+    background-color: #BBB;
 }
